Improve API + cleanup code in style of Java 17 (#1969)